lots for testing for WhereAnalyzerTest